
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct udp_hdr {void* uh_ulen; void* uh_dport; void* uh_sport; scalar_t__ uh_sum; } ;
struct ip_hdr {int ip_v; int ip_hl; int ip_dst; int ip_src; void* ip_len; void* ip_id; int ip_p; int ip_ttl; scalar_t__ ip_sum; scalar_t__ ip_off; scalar_t__ ip_tos; } ;
struct TYPE_2__ {int addr_ip; } ;
struct intf_entry {TYPE_1__ intf_addr; } ;
struct addr {int addr_ip; } ;
typedef int ip_t ;
typedef int intf_t ;
typedef int buf ;


 int IP_HDR_LEN ;
 int IP_PROTO_UDP ;
 int IP_TTL_MAX ;
 int UDP_HDR_LEN ;
 scalar_t__ addr_aton (char*,struct addr*) ;
 void* htons (int) ;
 int intf_close (int *) ;
 int intf_get_dst (int *,struct intf_entry*,struct addr*) ;
 int * intf_open () ;
 int ip_checksum (char*,int) ;
 int ip_close (int *) ;
 int * ip_open () ;
 int ip_send (int *,char*,int) ;
 int memset (char*,int ,int) ;
 int printf (char*) ;

int
main(int argc, char **argv)
{
    ip_t *sock;
    intf_t *intf;
    struct addr dst;
    struct ip_hdr *ip;
    struct udp_hdr *udp;
    struct intf_entry entry;
    int len = IP_HDR_LEN + UDP_HDR_LEN;
    char buf[len];

    if (argc < 2 || addr_aton(argv[1], &dst)) {
        printf("error: please specify a target ip address\n");
        return 1;
    }

    memset(buf, 0, sizeof(buf));

    ip = (struct ip_hdr *) buf;
    ip->ip_v = 4;
    ip->ip_hl = 5;
    ip->ip_tos = 0;
    ip->ip_off = 0;
    ip->ip_sum = 0;
    ip->ip_ttl = IP_TTL_MAX;
    ip->ip_p = IP_PROTO_UDP;
    ip->ip_id = htons(0xdead);
    ip->ip_len = htons(len);

    udp = (struct udp_hdr *) (buf + IP_HDR_LEN);

    udp->uh_sum = 0;
    udp->uh_sport = htons(0);
    udp->uh_dport = htons(5353);
    udp->uh_ulen = htons(UDP_HDR_LEN);

    intf = intf_open();
    intf_get_dst(intf, &entry, &dst);
    intf_close(intf);

    ip->ip_src = entry.intf_addr.addr_ip;
    ip->ip_dst = dst.addr_ip;
    ip_checksum(buf, len);

    sock = ip_open();
    if (!sock) {
        printf("error: root privileges needed for raw socket\n");
        return 1;
    }
    ip_send(sock, buf, len);
    ip_close(sock);

    return 0;
}
